@@ -6,6 +6,7 @@ export(compound_tbl_sdf)
 export(compounds)
 export(createCompDb)
 export(createCompDbPackage)
+export(make_metadata)
 export(src_compdb)
 export(tables)
 exportClasses(CompDb)
